apply changes from 3.1.1